# ddos_inspector

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .env  .gitignore  CMakeLists.txt  LICENSE  README.md  Test scenerio.docx  docker-compose.yml  snort_ddos_config.lua  testing_config.json
.cache/clangd/index/: behavior_tracker.cpp.CE8C99AEF18669D3.idx  behavior_tracker.h.9900E72CFB253DD1.idx  behavior_tracker.hpp.1B0A6FEED19FC33C.idx  ddos_inspector.cpp.7F08E32863ECF2AF.idx  ddos_inspector.hpp.3D5006A0A3463CB1.idx  ddos_main.cpp.54C5ED7012DFE1E6.idx  firewall_action.cpp.78A1DC01F72B23E9.idx  firewall_action.h.FCE0B1FCFD9539B4.idx  firewall_action.hpp.1591B1ABEE383BDA.idx  packet_data.h.CB4423333BB32981.idx  packet_data.hpp.84AF64C5A9376B2B.idx  stats_engine.cpp.E23B373EEF180A89.idx  stats_engine.h.665501D2B959C24A.idx  stats_engine.hpp.4C3BFE91BFF68E33.idx  test_behavior_tracker.cpp.26F2591E1EE1287B.idx  test_firewall_action.cpp.D993AECD42C959DC.idx  test_stats_engine.cpp.D96C1A6B5D618374.idx  unit_tests.cpp.47DDE3837D8836B9.idx
.github/workflows/: block-main-push.yml  build-and-release.yml  build-and-release.yml_bak  ci.yml  docker-publish.yml  docker-publish.yml_bak
Prometheus-ELK metrics dashboard/: Dockerfile.metrics  Dockerfile.snort-stats  README.md  ddos_inspector_real_metrics.cpp  docker-compose.yml  guides.md  snort_stats_exporter.py
Prometheus-ELK metrics dashboard/grafana/dashboards/: ddos-monitoring.json
Prometheus-ELK metrics dashboard/grafana/provisioning/dashboards/: ddos-real-metrics.json
Prometheus-ELK metrics dashboard/logstash/pipeline/: logstash.conf  snort.conf
Prometheus-ELK metrics dashboard/prometheus/: alert_rules.yml  alertmanager.yml  prometheus.yml
backup/: SECURITY_IMPROVEMENTS.md
backup/include/: firewall_action_original.hpp  firewall_action_secure.hpp
backup/scripts/: migrate_to_secure.sh  migrate_to_secure_v2.sh
backup/src/: firewall_action_original.cpp  firewall_action_secure.cpp  firewall_action_secure_v2.cpp
ci/: Vagrantfile  ansible-playbook.yml
data/: ddos_inspector_stats
docker/: Dockerfile  entrypoint.sh
docs/: ADAPTIVE_THRESHOLDS_IMPLEMENTATION.md  COMPREHENSIVE_PROJECT_DOCUMENTATION.md  DDOS_INSPECTOR_IMPROVEMENTS.md  DOCKER_NETWORK_DEPLOYMENT_GUIDE.md  ENVIRONMENT_CONFIGURATION.md  FIREWALL_ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  RACI.md  README.md  REAL_WORLD_ALGORITHM_IMPROVEMENTS.md  REAL_WORLD_FIREWALL_ENHANCEMENTS.md  deadlock_analysis.md  design_spec.md  env_validation.md  literature_review.md  snort3_plugin_interface_hooks.md  technical_analysis.md
docs/Cmake build troubleshooting/: README.md
docs/Docker deployment guide/: DOCKER_TROUBLESHOOTING.md  README.md
docs/Install Prometheus Library/: README.md
docs/PHASE02_DS/: snort3_prefiltering_research_notes.md
docs/Test Running Guide/: README.md
docs/architecture/: README.md
docs/configuration/: README.md
docs/deployment/: README.md  docker.md  host.md  network.md
docs/development/: README.md  api-reference.md  contributing.md
docs/getting-started/: README.md
docs/legacy/: RACI.md  README.md  env_validation.md
docs/legacy/Configuration guide/: README.md
docs/legacy/Docker deployment guide/: README.md
docs/legacy/Install Snort 3 Library/: README.md
docs/legacy/PHASE01_LR/: detection_gaps.md  technical_analysis.md
docs/legacy/PHASE02_DS/: ddos_inspector_algorithmic_spec.md  ddos_inspector_architecture.md  ddos_inspector_mitigation_flow.md  snort3_prefiltering_research_notes_improved.md
docs/legacy/Snort 3 Integration guide/: README.md
docs/monitoring/: README.md
docs/testing/: README.md
docs/troubleshooting/: README.md
include/: behavior_tracker.hpp  ddos_inspector.hpp  detector_interface.hpp  detectors.hpp  file_logger.hpp  firewall_action.hpp  packet_data.hpp  stats_engine.hpp  testing_config.hpp
prometheus-elk-metrics/: Dockerfile.metrics  Dockerfile.snort-stats  README.md  ddos_inspector_real_metrics.cpp  deploy.sh  snort_stats_exporter.py
prometheus-elk-metrics/grafana/back/: test.json
prometheus-elk-metrics/grafana/dashboards/: ddos-monitoring.json  ddos-real-metrics.json
prometheus-elk-metrics/grafana/datasources/: prometheus.yml
prometheus-elk-metrics/grafana/provisioning/alerting/: alerting.yml
prometheus-elk-metrics/grafana/provisioning/dashboards/: dashboard.yml
prometheus-elk-metrics/grafana/provisioning/datasources/: prometheus.yml
prometheus-elk-metrics/grafana/provisioning/plugins/: plugins.yml
prometheus-elk-metrics/logstash/config/: jvm.options  log4j2.properties  logstash.yml  pipelines.yml
prometheus-elk-metrics/logstash/pipeline/: logstash.conf
prometheus-elk-metrics/prometheus/: alert_rules.yml  alertmanager.yml  prometheus.yml
release/: README.md  snort_ddos_config.lua
scripts/: README.md  build_project.sh  check_firewall_rules.sh  common_functions.sh  ddos-aliases.sh  deploy.sh  deploy_docker.sh  deploy_host.sh  docker-compose-wrapper.sh  flush_ddos_firewall.sh  force_flush_ddos.sh  install_dependencies.sh  nftables_rules.sh  prepare_for_github.sh  quick_flush_ddos.sh  release.sh  reset_metrics.sh  reset_metrics_complete.sh  run_slowloris.sh  run_syn_flood.sh  run_syn_flood_efficient.sh  run_tests.sh  setup_env.sh  simple_flush_ddos.sh  test_firewall_fixes.sh
src/: behavior_tracker.cpp  configuration.cpp  ddos_inspector.cpp  detector_registry.cpp  file_logger.cpp  firewall_action.cpp  stats_engine.cpp  testing_config.cpp
tests/: CMakeLists.txt  test_advanced_detection.cpp  test_behavior_tracker.cpp  test_classification.cpp  test_deadlock_prevention.cpp  test_firewall_action.cpp  test_normal_traffic.cpp  test_realistic_attacks.cpp  test_stats_engine.cpp  unit_tests.cpp
